# pylitterbot

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  LR5_INVESTIGATION_SUMMARY.md  MITMPROXY_GUIDE.md  README.md  attach_whisker.py  bypass_ssl_pinning.js  credentials_helper.py  explore_api.py  introspect_schema.py  probe_lr5.py  probe_lr5_authenticated.py  probe_lr5_deep.py  pylintrc  pyproject.toml  sample.py  setup.cfg  setup.py  spawn_whisker.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  python-publish.yml
pylitterbot/: __init__.py  _version.py  account.py  activity.py  camera.py  const.py  debug_ui.py  enums.py  event.py  exceptions.py  litterrobot.py  models.py  pet.py  robot.py  session.py  sleep_schedule.py  transport.py  utils.py  version.py  ws_monitor.py
pylitterbot/mcp/: __init__.py  __main__.py  helpers.py  server.py
pylitterbot/mcp/tools/: __init__.py  activity.py  commands.py  compound.py  pets.py  settings.py  status.py
pylitterbot/robot/: __init__.py  feederrobot.py  litterrobot.py  litterrobot3.py  litterrobot4.py  litterrobot5.py  models.py  robot.py
pylitterbot2mqtt/: Dockerfile  README.md  pylitterbot2mqtt.py  requirements.txt
sample/: sample.py
tests/: __init__.py  common.py  conftest.py  test_account.py  test_camera.py  test_enums.py  test_feederrobot.py  test_init.py  test_litterrobot.py  test_litterrobot3.py  test_litterrobot4.py  test_litterrobot5.py  test_mcp_helpers.py  test_mcp_tools_activity.py  test_mcp_tools_commands.py  test_mcp_tools_compound.py  test_mcp_tools_pets.py  test_mcp_tools_settings.py  test_mcp_tools_status.py  test_pet.py  test_robot.py  test_session.py  test_transport.py  test_utils.py
