[project]
name = "pylitterbot"
description = "Python package for controlling Whisker automatic robots."
readme = "README.md"
license = "MIT"
authors = [
    { name = "Nathan Spencer", email = "natekspencer@gmail.com" }
]
keywords = ["Whisker", "Litter-Robot", "Feeder-Robot", "litter box", "pet feeder", "asynchronous"]
dependencies = [
    "aiohttp (>=3.8.1)",
    "deepdiff (>=6.2.1)",
    "pyjwt (>=2.7.0)",
    "pycognito (>=2024.2.0)"
]
requires-python = ">=3.10"
dynamic = [ "version" ]

[project.urls]
Homepage = "https://github.com/natekspencer/pylitterbot"
Repository = "https://github.com/natekspencer/pylitterbot"

[tool.poetry]
version = "0.0.0"
include = ["pylitterbot/py.typed"]

[tool.poetry.group.dev.dependencies]
pytest = "9.0.2"
pytest-asyncio = "1.3.0"
pytest-cov = "7.0.0"
aioresponses = "0.7.8"
mypy = "1.19.1"
tox = "4.34.1"
pytest-timeout = "2.4.0"
ruff = "0.14.14"
pytest-freezer = "0.4.9"
pre-commit = "4.5.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.ruff.lint]
select = [
    "D", # pydocstyle
    "E", # pycodestyle Error
    "F", # Pyflakes
    "I", # isort
    "W", # pycodestyle Warning
]
ignore = [
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "E501", # Line too long
]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["F401"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"
