[project]
name = "pylitterbot"
description = "Python package for controlling Whisker automatic robots."
authors = [{ name = "Nathan Spencer", email = "natekspencer@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
keywords = [
    "Whisker",
    "Litter-Robot",
    "Feeder-Robot",
    "litter box",
    "pet feeder",
    "asynchronous",
]
dependencies = [
    "aiohttp>=3.8.1",
    "deepdiff>=6.2.1",
    "pyjwt>=2.7.0",
    "pycognito>=2024.2.0",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/natekspencer/pylitterbot"
Repository = "https://github.com/natekspencer/pylitterbot"

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "aioresponses==0.7.8",
    "mypy==1.19.1",
    "tox==4.35.0",
    "pytest-timeout==2.4.0",
    "ruff==0.15.1",
    "pytest-freezer==0.4.9",
    "pre-commit==4.5.1",
]

[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.version]
path = "pylitterbot/__init__.py"
pattern = true

[tool.hatch.build.targets.sdist]
include = ["pylitterbot"]

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.ruff.lint]
select = [
    "D", # pydocstyle
    "E", # pycodestyle Error
    "F", # Pyflakes
    "I", # isort
    "W", # pycodestyle Warning
]
ignore = [
    "D203", # 1 blank line required before class docstring
    "D213", # Multi-line docstring summary should start at the second line
    "E501", # Line too long
]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = false

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["F401"]

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { git = { commit = true, tags = true }}]

[tool.uv-dynamic-versioning]
pattern = "default-unprefixed"
