[metadata]
name = pylitterbot
version = 2021.8.0
author = Nathan Spencer
author_email = natekspencer@gmail.com
description = Python package for controlling a Litter-Robot Connect self-cleaning litter box.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natekspencer/pylitterbot
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    Authlib
    httpx
    pytz
    
[options.packages.find]
exclude = tests

[options.extras_require]
test = pytest; pytest-asyncio; pytest-cov