[metadata]
name = pylitterbot
version = attr: pylitterbot.__version__
author = Nathan Spencer
author_email = natekspencer@gmail.com
description = Python package for controlling a Litter-Robot Connect self-cleaning litter box.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natekspencer/pylitterbot
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    Authlib>=0.15.5
    httpx>=0.18.2

[options.packages.find]
exclude = tests

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-cov
lint =
    black
    isort