[metadata]
name = pylitterbot
version = attr: pylitterbot.__version__
author = Nathan Spencer
author_email = natekspencer@gmail.com
description = Python package for controlling a Litter-Robot Connect self-cleaning litter box.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natekspencer/pylitterbot
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    aiohttp>=3.8.1
    PyJWT>=2.4.0
    backports.zoneinfo;python_version<"3.9"

[options.packages.find]
exclude = tests

[options.package_data]
* = py.typed

[options.extras_require]
test =
    pytest
    pytest-asyncio
    pytest-cov
    pytest-aiohttp
    pytest-freezegun
    aioresponses
lint =
    black
    isort
    pylint
    mypy